--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <link rel="stylesheet" href="./styles.css/architect.css" />
     <title>G3 Architects</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h3>G3 Architects</h3>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+  </body>
 </html>
