--- a/index.html
+++ b/index.html
@@ -39,8 +39,34 @@
     </header>
     <!-- ! header ends -->
 
-    <main></main>
+    <!-- ! main starts -->
+    <main>
+      <!-- * teams section -->
+      <section class="teams-container">
+        <div class="teams-image-container">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
 
+        <div class="teams-content">
+          <h3 class="teams-title">
+            <span>Quick list</span> <span>of Our</span> <span>Features</span>
+          </h3>
+          <p class="teams-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+    </main>
+    <!-- ! main ends -->
+
+    <!--! footer starts -->
     <footer></footer>
+    <!-- ! footer ends -->
   </body>
 </html>
