--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <!-- ! header starts  -->
     <header>
-      <!-- * navbar -->
+      <!-- ? navbar -->
       <nav>
-        <h3 class="nav-title">G3 Architects</h3>
+        <h3 class="section-title">G3 Architects</h3>
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
@@ -20,12 +20,12 @@
         </ul>
       </nav>
 
-      <!-- * banner -->
+      <!-- ? banner -->
       <div class="banner">
         <div class="banner-content">
           <h1 class="banner-title">Brand New Group of Architects</h1>
 
-          <p class="banner-description">
+          <p class="banner-description light-gray-text">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
@@ -41,7 +41,7 @@
 
     <!-- ! main starts -->
     <main>
-      <!-- * teams section -->
+      <!-- ? teams section -->
       <section class="teams-container">
         <div class="teams-image-container">
           <img src="./images/team1.png" alt="" />
@@ -52,15 +52,29 @@
 
         <div class="teams-content">
           <h3 class="teams-title">
-            <span>Quick list</span> <span>of Our</span> <span>Features</span>
+            <span class="light-gray-text">Quick list</span> <span>of Our</span>
+            <span>Features</span>
           </h3>
-          <p class="teams-description">
+          <p class="teams-description light-gray-text">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
           </p>
           <button class="btn-primary">Explore More</button>
         </div>
+      </section>
+
+      <!-- ? features section -->
+      <section class="features"></section>
+
+      <!-- ? facts section -->
+      <section class="facts">
+        <h3 class="section-title">Some Facts</h3>
+
+        <p class="light-gray-text">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
       </section>
     </main>
     <!-- ! main ends -->
